- CMAF-compatible signaling
- support for PPS injection for inband param set modes
- improved SmoothStreaming support
- DASH period continuity support (from playlists or reframer)

## Image File Format (HEIF)
- support for grid creation and other derive images
- support for encryption
- support for time range in -add-image
- support for item to sample data reference (no copy)
- AVIF support

## MP4Box
- in-place editing support for MP4Box (no file remux) 
- improved splitting in MP4Box, including sample-accurate split
- ISOBMFF edit lists modification through MP4Box :edits and -edits
- support for track extraction from non ISOBMF sources in MP4Box
- most import options can now be applied on an existing ISOBMF file
- support for multiple filter chains per source in MP4Box dash or add syntax
- chunk interleaving dumper

## Filter core
- Python bindings for filter session
- support for custom HAS adaptation algorithms (JS and Python)
- support for custom remotery callbacks (JS and Python)
- splicing support in playlists: raw and compressed domain, vod and live splicing
- tile splitting now available as a filter 
- added avgen counter generation
- raw options for flist and reframer
- flip and rotate in vout
- simple UI for vout to test seeking and speed modes
- improved colorspace support in rendering (OpenGL only)
- improved round-trip audio decode
- improved audio resampler
- added back old arch compositor features (TEMI support, HEVC tiling JS monitoring, MPEG-4 SegmentDescriptor) 
- support for reading back frame interface data (GPU, decoder mem) in JS or Python sink filters

## Media Formats
- improved support for MPEG-H audio mux/demux/dashing
- VVC parsing, inspecting, mux and demux support (ISOBMFF and M2TS)
- VUI color info rewrite for AVC and HEVC (mp4box and bsrw filter)
- support for Dolby TrueHD 
- improved multichannel AAC (>=8) support 
- improved raw video in ISOBMFF support
- improved bitstream dumping for inspect analyze mode